--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
         
         .menu-hero {
             /* Using a placeholder image with a fallback in case the URL fails */
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://placehold.co/1260x750/000000/FFFFFF?text=Menu+Hero') center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://plus.unsplash.com/premium_photo-1728412897842-06f0fc4c2ec6?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') center/cover;
             /* Original URL: https://plus.unsplash.com/premium_photo-1728412897842-06f0fc4c2ec6?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2 */
             background-size: cover;
             background-position: center;
